--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "slate": "^0.103.0",
+    "slate-history": "^0.100.0",
     "slate-react": "^0.102.0",
     "web-vitals": "^2.1.4"
   },
